# scotus

./: .gitignore  Cargo.toml  Makefile  go.mod  go.sum  ot21.numbers  ot21.tsv  ot21.txt  package-lock.json  package.json  webpack.config.js
cmd/analyze/: main.go
cmd/assemble/: main.go
cmd/csvtojson/: main.go
cmd/ot21/: main.go
cmd/server/: main.go
cmd/snoop/: main.go
pkg/async/: future.go  run.go
pkg/csv/: reader.go  row.go
pkg/data/: data.go  model.go
pkg/data/internal/: util.go
pkg/data/martinquinn/: justice.go  read.go  term.go
pkg/data/martinquinn/bycourt/: court.go  read.go  stats.go
pkg/data/martinquinn/byjustice/: justice.go  read.go  term.go
pkg/data/option/: download_options.go
pkg/data/overrulings/: case.go  decision.go  options.go  read.go
pkg/data/scotusdb/: case.go  decision.go  options.go  read.go  term.go  vote.go
pkg/data/segalcover/: justice.go  party.go  president.go  read.go
pkg/html/search/: query.go  selector.go
pkg/logging/: logger.go  setup.go
pkg/scotus/: case.go  decision.go  options.go  scotus.go  store.go  term.go  vote.go
pkg/tools/: tools.go
pkg/web/: api_buildinfo.go  assets.go  data.go  json.go  mux.go  web.go
src/: db.rs
src/assemble/: main.rs
src/b/: index.html
