[package]
name = "scotus"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
csv = "1.1.6"
linked-hash-map = "0.5.6"
reqwest = { version = "0.11.11", features = ["blocking"] }
zip = "0.6.2"

[[bin]]
name = "assemble"
path = "src/assemble/main.rs"
